Fix wrapping issue on Room component when there are many players

--- a/cambox-ui/src/pages/room/PlayerTile.scss
+++ b/cambox-ui/src/pages/room/PlayerTile.scss
@@ -1,7 +1,7 @@
 .player-tile--container {
     display: flex;
     flex-direction: column;
-    padding: 2em;
+    padding: 1em;
 
     @media ( max-width: 768px ) {
         padding: 1em;
