--- a/cambox-ui/src/pages/room/Room.scss
+++ b/cambox-ui/src/pages/room/Room.scss
@@ -12,6 +12,7 @@
 
 .players-container, .games-container {
     display: flex;
+    flex-wrap: wrap;
     position: relative;
     flex-direction: row;
     margin: auto auto;
